[gd_scene load_steps=4 format=2]

[ext_resource path="res://script/Main.gd" type="Script" id=1]
[ext_resource path="res://font_/Silverkids.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 61
use_filter = true
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 46.0
margin_top = 47.0
margin_right = 278.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 1 )
text = "Live Room"

[node name="Button2" type="Button" parent="."]
margin_left = 46.0
margin_top = 144.0
margin_right = 278.0
margin_bottom = 216.0
custom_fonts/font = SubResource( 1 )
text = "Green Room"

[node name="Button3" type="Button" parent="."]
margin_left = 46.0
margin_top = 240.0
margin_right = 278.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 1 )
text = "Tardis Console Room"

[node name="Button4" type="Button" parent="."]
visible = false
margin_left = 46.0
margin_top = 344.0
margin_right = 278.0
margin_bottom = 416.0
custom_fonts/font = SubResource( 1 )
text = "test"

[node name="Button5" type="Button" parent="."]
visible = false
margin_left = 46.0
margin_top = 440.0
margin_right = 278.0
margin_bottom = 512.0
custom_fonts/font = SubResource( 1 )
text = "test"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
