extends Control





func _on_Button_pressed():
	get_tree().change_scene("res://levels/liveRoom.tscn")


func _on_Button2_pressed():
	get_tree().change_scene("res://levels/GreenRoom.tscn")


func _on_Button3_pressed():
	get_tree().change_scene("res://levels/Tadisinside.tscn")


func _on_Button4_pressed():
	pass # Replace with function body.


func _on_Button5_pressed():
	pass # Replace with function body.
